--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,1 +1,3 @@
-{ "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }] }
+{
+    "routes": [{ "src": "/[^.]+", "dest": "/", "status": 200 }]
+}
